		- Orcs start game with sickness potion (from Sporkhack)
		- Wizards may start with cloak of protection/invisibility/displacement/robe/oilskin cloak/alchemy smock (based on idea from Sporkhack)
		- Scroll of identify universally known (from SporkHack)
		- Wearing fedora increases luck of archaeologists
	* Nerfing
		- Increase chances of getting a golem from polypiling (idea from SporkHack)
		- The Eye of the Aethiopica energy production is no longer completely insane
		- Shopkeepers prefer save dungeons
	* Interface changes
		- Colours for walls and floor of special dungeon regions in TTY mode, work by "L" (Leon Arnott), slightly modified. Affects beehives, gardens, Mines, Wizard's tower, Astral Plane and altars.
		- Magic trap glyph is now yellow, anti-magic field dark green
		- Smarter object colours (unique colours for can of grease - bright green and tinning kit - orange).
		- Follow guidelines for monster color assignment (based on work by "L" - Leon Arnott)
		- Bear trap is no longer ineffective on diagonals
		- Better default config file - MSGTYPE and MONSTERCOLOR are mentioned, obvious MSGTYPE settings are appplied.
		- PARANOID define enabled
		- Smarter warning player before walking into known traps
	* Grinding elimination
		- Chance of wand wresting raised to 1/11
		- Carrying digging tools to shop is no longer blocked
		- Luring wraiths from graveyards is now pointless - undead creatures are as likely to leave corpse on graveyard as on normal levels (reduced chance for normal levels, raised for graveyards)
		- Autoidentify BUC of products from BUC identified item generator (tinning kit, horn of plenty).
		- Fire traps removed from Plane of Fire
	* Merging in the best part of SporkHack absent from UnNetHack
		- Allow more than one special room per level in the DoD
		- Touch of death changed - from SporkHack. Instadeath removed, antimagic is not fully protecting.