@@ -41,6 +41,7 @@
 		- Wizards may start with cloak of protection/invisibility/displacement/robe/oilskin cloak/alchemy smock (based on idea from Sporkhack)
 		- Scroll of identify universally known (from SporkHack)
 		- Wearing fedora increases luck of archaeologists
+		- Archaeologists start with key and may start with potions of object detection, scrolls of gold detection, chances for other equipment tweaked a bit
 	* Nerfing
 		- Increase chances of getting a golem from polypiling (idea from SporkHack)
 		- The Eye of the Aethiopica energy production is no longer completely insane
